--- a/menu/public/index.html
+++ b/menu/public/index.html
@@ -51,5 +51,41 @@
       </div>        
   </nav>
 
+  <article>
+
+    <img src="img/historia-do-surdo.png" alt="Surdo" title="Foto: Surdo">
+      <h2> 30 Fatos sobre Surdez</h2>
+      <p>São as 30 coisas que mais odeio!
+        Minha visão, é não considero por uma pessoa "deficiente" e DIFERENTE e SURDO, sim!</p>
+        
+  </article>
+
+  <footer> <!-- Rodapé -->
+    <img src="img/logo.png" alt="Projeto Site">
+    <ul>
+        <li><a href="#">Quem somos</a></li>
+        <li><a href="#">Nossa missão</a></li>
+        <li><a href="#">Comercial</a></li>
+    </ul>
+
+    <address>
+        Rua das Oportunidades, 1000<br>
+        Portas Abertas/SP<br>
+        <a href="tel:+55165555555555">(16) 55555-55555</a><br>
+        <a href="mailto:contato@visurdez.com.br">contato@visurdez.com.br</a>
+    </address>
+</footer>
+<!--VLibras-->
+<div vw class="enabled">
+    <div vw-access-button class="active"></div>
+    <div vw-plugin-wrapper>
+      <div class="vw-plugin-top-wrapper"></div>
+    </div>
+</div>
+<script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+<script>
+    new window.VLibras.Widget('https://vlibras.gov.br/app');
+</script>
+
   </body>
 </html>
